added hero scection

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
         </header>
         
         
-        <section>
+        <section id="hero">
 
-            <h1>Sohom Dey</h1>
+            <div>
+                <h2>Hi,</h2>
+                <h1>I'm Sohom Dey</h1>
+                <h2>A Neuroscience doctoral student</h2>
+            </div>
 
         </section>
 
