--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         </section>
 
 
+        <footer>
+
+            <p>&copy;Sohom Dey</p>
+
+        </footer>
+
+
         <script src="js/master.js"></script>
 
     </body>
