--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
 
         </section>
 
-        <section></section>
+        <section>
 
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, ducimus vero. Nisi nesciunt quidem corporis dolorem quo minima. Sequi officiis neque ipsa culpa dolore modi, asperiores commodi debitis dolorum at.</p>
+
+        </section>
 
         <footer>
 
